--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,17 +16,30 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DATABASE=${POSTGRES_DATABASE}
 
+  test:
+    build:
+      context: .
+      target: builder
+    command: ./scripts/test.sh
+    depends_on:
+      database:
+        condition: service_healthy
+    environment:
+      - POSTGRES_HOST=database
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
+
   database:
     image: postgres:13-alpine
     command: postgres -c 'max_connections=300'
-    ports:
-      - ${POSTGRES_PORT}:${POSTGRES_PORT}
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DATABASE}
     volumes:
-      - ./data/postgres/:/docker-entrypoint-initdb.d/
+      - "./data/postgres/:/docker-entrypoint-initdb.d/"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
